  [Michele Simionato]
  * Changed the generation of the hazard statistics to consume very little
    memory
  * Fixed a bug with concurrent_tasks being inherited from the parent
    calculation instead of using the standard default
  * Removed the dependency from mock, since it is included in unittest.mock
  * For scenario, replaced the `branch_path` with the GSIM representation in
    the realizations output
  * Added a check for suspiciously large source geometries
  * Deprecated the XML disaggregation exporters in favor of the CSV exporters
  * Turned the disaggregation calculator into a classical post-calculator
    to use the precomputed distances and speedup the computation even more
  * Fixed the disaggregation calculator by discarding the ruptures outside
    the integration distance
  * Optimized the speed of the disaggregation calculator by moving a statistical
    functions outside of the inner loop
  * Changed the file names of the exported disaggregation outputs
  * Fixed an export agg_curves issue with pre-imported exposures
  * Fixed an export agg_curves issue when the hazard statistics are different
    from the risk statistics
  * Removed the disaggregation statistics: now the engine disaggregates only on
    a single realization (default: the closest to the mean)
  * Forbidden disaggregation matrices with more than 1 million elements
  * Reduced the data transfer when computing the hazard curves
  * Optimized the reading of large CSV exposures
  * Fixed the --hc functionality across users
  * Optimized the reduction of the site collection on the exposure sites
  * Made more robust the gsim logic tree parser: lines like
    `<uncertaintyModel gmpe_table="../gm_tables/Woffshore_low_clC.hdf5">`
    are accepted again
  * Added a check against duplicated values in nodal plane distributions and
    hypocenter depth distributions
  * Changed the support for zipped exposures and source models: now the