@@ -1,3 +1,3 @@
-# generated_by='OpenQuake engine 3.5.0-gitd83c42cda6', start_date='2019-05-12T07:17:38', checksum=3257945774
-loss_type,unit,mean,stddev
-structural,USD,1.010000E+03,3.158832E+03
+# generated_by='OpenQuake engine 3.6.0-git709953ef8a', start_date='2019-06-17T09:45:22', checksum=3257945774
+rlzi,loss_type,unit,mean,stddev
+0,structural,USD,1.010000E+03,3.158832E+03
