@@ -1,3 +1,3 @@
-# generated_by='OpenQuake engine 3.5.0-gitd83c42cda6', start_date='2019-05-12T07:17:39', checksum=372210909
-loss_type,unit,mean,stddev
-structural,USD,5.960427E+02,3.678971E+02
+# generated_by='OpenQuake engine 3.6.0-git709953ef8a', start_date='2019-06-17T09:45:26', checksum=372210909
+rlzi,loss_type,unit,mean,stddev
+0,structural,USD,5.960427E+02,3.678971E+02
