@@ -1,3 +1,3 @@
-# generated_by='OpenQuake engine 3.5.0-gitd83c42cda6', start_date='2019-05-12T07:17:39', checksum=486158159
-loss_type,unit,mean,stddev
-structural,USD,1.370413E+07,5.312044E+06
+# generated_by='OpenQuake engine 3.6.0-git709953ef8a', start_date='2019-06-17T09:45:28', checksum=486158159
+rlzi,loss_type,unit,mean,stddev
+0,structural,USD,1.370413E+07,5.312043E+06
