@@ -1,3 +1,4 @@
-# generated_by='OpenQuake engine 3.5.0-gitd83c42cda6', start_date='2019-05-12T07:17:40', checksum=2307593317
-loss_type,unit,mean,stddev
-structural,USD,1.167565E+03,1.335238E+03
+# generated_by='OpenQuake engine 3.6.0-git709953ef8a', start_date='2019-06-17T09:45:30', checksum=2307593317
+rlzi,loss_type,unit,mean,stddev
+0,structural,USD,1.676968E+03,1.660424E+03
+1,structural,USD,6.581619E+02,5.499982E+02
